--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,7 @@
 plugins {
     id 'com.android.application'
+    id 'kotlin-android'
+    id 'kotlin-kapt'
     id 'org.jetbrains.kotlin.android'
 }
 
@@ -27,17 +29,15 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
     kotlinOptions {
         jvmTarget = '1.8'
     }
     buildFeatures {
-        compose true
-    }
-    composeOptions {
-        kotlinCompilerExtensionVersion '1.3.2'
+        viewBinding true
+        dataBinding true
     }
     packagingOptions {
         resources {
@@ -47,20 +47,61 @@ android {
 }
 
 dependencies {
+    implementation project(path: ':lib')
+    implementation 'com.github.metaplex-foundation:SolanaKT:2.0.0'
 
-    implementation 'androidx.core:core-ktx:1.8.0'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
-    implementation 'androidx.activity:activity-compose:1.5.1'
-    implementation platform('androidx.compose:compose-bom:2022.10.00')
-    implementation 'androidx.compose.ui:ui'
-    implementation 'androidx.compose.ui:ui-graphics'
-    implementation 'androidx.compose.ui:ui-tooling-preview'
-    implementation 'androidx.compose.material3:material3'
+    implementation 'androidx.core:core-ktx:1.10.1'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.6.0'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.6.0'
+    implementation 'com.google.android.material:material:1.9.0'
+    implementation 'com.google.android.flexbox:flexbox:3.0.0'
+
+    // Image Loading
+    def glide_version = '4.13.2'
+    implementation "com.github.bumptech.glide:glide:$glide_version"
+
+    def json_version = '1.4.1'
+    implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:$json_version")
+
+    def lifecycle_version = '2.5.0'
+    implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version")
+    implementation("androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version")
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+
+    //slide-card
+    def cardstackview = '2.3.4'
+    implementation("com.github.yuyakaido:cardstackview:$cardstackview")
+
+    // Support Library
+    def recyclerview_version = '1.3.0'
+    implementation("androidx.recyclerview:recyclerview:$recyclerview_version")
+    def cardview_version = '1.0.0'
+    implementation "androidx.cardview:cardview:$cardview_version"
+
+    // Kotlin
+    def kotlin_version = '1.7.10'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
+    // reactivex
+    def rx_version = '3.0.0'
+    implementation "io.reactivex.rxjava3:rxandroid:$rx_version"
+    implementation "io.reactivex.rxjava3:rxjava:$rx_version"
+
+    //retrofit2
+    def retrofit_version = "2.9.0"
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    implementation "com.squareup.retrofit2:adapter-rxjava3:$retrofit_version"
+
+    //OkHttp
+    def okhttp_bom_version = "4.9.0"
+    implementation "com.squareup.okhttp3:okhttp-bom:$okhttp_bom_version"
+    implementation "com.squareup.okhttp3:okhttp"
+    implementation "com.squareup.okhttp3:logging-interceptor"
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    androidTestImplementation platform('androidx.compose:compose-bom:2022.10.00')
-    androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
-    debugImplementation 'androidx.compose.ui:ui-tooling'
-    debugImplementation 'androidx.compose.ui:ui-test-manifest'
 }
