--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:tools="http://schemas.android.com/tools">
+	xmlns:tools="http://schemas.android.com/tools"
+	package="com.looktab.echonupy">
+
+	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
 	<application
 		android:allowBackup="true"
@@ -12,15 +16,24 @@
 		android:supportsRtl="true"
 		android:theme="@style/Theme.EchoNupy"
 		tools:targetApi="31">
+
 		<activity
-			android:name=".MainActivity"
-			android:exported="true"
-			android:label="@string/app_name"
-			android:theme="@style/Theme.EchoNupy">
+			android:name=".feature.MainActivity"
+			android:exported="true">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 
 				<category android:name="android.intent.category.LAUNCHER" />
+			</intent-filter>
+			<intent-filter>
+				<action android:name="android.intent.action.VIEW" />
+
+				<category android:name="android.intent.category.DEFAULT" />
+				<category android:name="android.intent.category.BROWSABLE" />
+
+				<data
+					android:host="sampleonconnect"
+					android:scheme="@string/nupy" />
 			</intent-filter>
 		</activity>
 	</application>
