--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,8 +29,8 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_11
-        targetCompatibility JavaVersion.VERSION_11
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
     kotlinOptions {
         jvmTarget = '1.8'
@@ -39,23 +39,18 @@ android {
         viewBinding true
         dataBinding true
     }
-    packagingOptions {
-        resources {
-            excludes += '/META-INF/{AL2.0,LGPL2.1}'
-        }
-    }
 }
 
 dependencies {
     implementation project(path: ':lib')
     implementation 'com.github.metaplex-foundation:SolanaKT:2.0.0'
 
-    implementation 'androidx.core:core-ktx:1.10.1'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.appcompat:appcompat:1.6.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.6.0'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.6.0'
-    implementation 'com.google.android.material:material:1.9.0'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
+    implementation 'com.google.android.material:material:1.8.0'
     implementation 'com.google.android.flexbox:flexbox:3.0.0'
 
     // Image Loading
@@ -76,8 +71,8 @@ dependencies {
 
     // Support Library
     def recyclerview_version = '1.3.0'
-    implementation("androidx.recyclerview:recyclerview:$recyclerview_version")
     def cardview_version = '1.0.0'
+    implementation("androidx.recyclerview:recyclerview:$recyclerview_version")
     implementation "androidx.cardview:cardview:$cardview_version"
 
     // Kotlin
@@ -100,6 +95,14 @@ dependencies {
     implementation "com.squareup.okhttp3:okhttp-bom:$okhttp_bom_version"
     implementation "com.squareup.okhttp3:okhttp"
     implementation "com.squareup.okhttp3:logging-interceptor"
+
+    def volley_version = "1.2.1"
+    implementation "com.android.volley:volley:$volley_version"
+
+    //viewpager2
+    implementation 'androidx.viewpager2:viewpager2:1.0.0'
+    implementation 'me.relex:circleindicator:2.1.6'
+    // implementation 'me.relex:circleindicator:1.3.2'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
