--- a/gradle.properties
+++ b/gradle.properties
@@ -20,4 +20,8 @@ kotlin.code.style=official
 # Enables namespacing of each library's R class so that its R class includes only the
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
+testing.rpc.localUrl=http://127.0.0.1:8899
 android.nonTransitiveRClass=true
+localValidator=false
+android.enableJetifier=true
+android.disableAutomaticComponentCreation=true
